tests/ui/badargs.stderr
error: unknown derive-adhoc keyword
  --> ui/badargs.rs:14:9
   |
14 |     fn $unknown() { }
   |         ^^^^^^^

error: no contained expansion field determined what to repeat here
  --> ui/badargs.rs:16:6
   |
16 |       $(
   |  ______^
17 | |     )
   | |_____^

error: unexpected arguments to expansion keyword
  --> ui/badargs.rs:20:19
   |
20 |         f ${fname junk}() { }
   |                   ^^^^

error: unexpected arguments to expansion keyword
  --> ui/badargs.rs:30:10
   |
30 | #[derive(Adhoc)]
   |          ^^^^^
   |
   = note: this error originates in the derive macro `Adhoc` (in Nightly builds, run with -Z macro-backtrace for more info)
